2016三周年活动专题

--- a/css/global/color.less
+++ b/css/global/color.less
@@ -6,6 +6,7 @@
 @zhblue:#698ebf;
 @bluebg:#1472cf;
 
+
 //light blue
 @blue: #00ccff;     //天蓝
 @bluex: #049abf;    //海青蓝
@@ -13,6 +14,7 @@
 @dk-blue: #0064cd;  //深蓝
 @bg-blue: #fafdff;  //浅蓝背景
 @bo-blue: #cceafe;  //边框浅蓝
+@light-blue:#f7fdff;
 
 @blue-bo:#C2D5E3;	//帖子边框
 //@blue-bg:#EAF8FC;	//帖子背景
