--- a/template/yylmacro/portal/portal_topic_2016.htm
+++ b/template/yylmacro/portal/portal_topic_2016.htm
@@ -1,175 +1,152 @@
-<!--{template common/header_m}-->
+<!--{template common/header_zt}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/index/party/2016.css" type="text/css" />
 <div class="m-header">
-   <h1>JX3PVE</h1> 
-</div>
-<div class="m-supportlist">
     <div class="wp">
-        <h3>赞助商：</h3>
-        <ul>
-           <li><a href="https://www.shiyanlou.com" target="_blank"><img src="http://img.jx3pve.com/img/party/2016/s-shiyanlou.png" alt=""></a></li>
-           <li><a href="https://rapoo.tmall.com" target="_blank"><img src="http://img.jx3pve.com/img/party/2016/s-rapoo.png" alt=""></a></li>
-           <li><a href="https://logitech.tmall.com" target="_blank"><img src="http://img.jx3pve.com/img/party/2016/s-logitech.png" alt=""></a></li>
-           <li><a href="https://razer.tmall.com" target="_blank"><img src="http://img.jx3pve.com/img/party/2016/s-leishe.png" alt=""></a></li>
-           <li><a href="https://cangraodz.tmall.com/" target="_blank"><img src="http://img.jx3pve.com/img/party/2016/s-canra.png" alt=""></a></li>
-        </ul>
+       <h1>JX3PVE</h1>
+       <span class="u-man"></span> 
     </div>
 </div>
+<div class="m-ac">
+    <span><em>活动状态：</em><b>进行中</b></span>
+    <span><em>活动时间：</em>2016/12/22 - 2016/12/31</span>
+    <span><em>赞助商：</em><a href="./">JX3PVE.COM</a>、<a href="https://www.shiyanlou.com" target="_blank">实验楼</a></span>
+</div>
 <div class="m-content">
-    <div class="wp">
-        <!-- 1.关注微信公众号 现金红包 -->
-        <div class="m-block m-money">
-            <h2 class="m-title"><em>1</em>.关注微信公众号 领取现金红包</h2>
+    <!-- 1.关注微信公众号 现金红包 -->
+    <div class="m-block m-money">
+        <div class="wp">
+            <h2 class="m-title"><em>1</em>关注微信公众号 领取现金红包</h2>
             <div class="m-primary">
-                <div class="u-code"><img src="http://img.jx3pve.com/img/header/wx_172.jpg" alt=""></div>
+                <img class="u-pic" src="http://img.jx3pve.com/img/party/2016/hongbao.png" alt="">
+                <img class="u-code" src="http://img.jx3pve.com/img/header/wx_172.jpg" alt="">
                 <div class="u-tips">
-                    <p class="u-gif"><img src="http://img.jx3pve.com/img/party/2016/money.gif" alt=""></p>
-                    <p class="u-time">关注微信公众号，12.28日随机发放红包。</p>
-                    <p class="u-wxhelp">查看帮助<img src="http://ww4.sinaimg.cn/large/bcc700eegw1fai1ueq94dj205k067dfy.jpg" alt=""></p>
+                    <p class="u-time">扫一扫左侧二维码，关注微信公众号。<br>
+                    <i><img src="http://img.jx3pve.com/img/party/2016/money.gif" alt=""></i>
+                    <span class="u-im">12.28日随机发放微信现金红包。</span><br>
+                    前800名微信绑定用户<b>100%</b>获得不低于1元红包。</p>
+                    <p class="u-wxhelp">查看帮助<img src="http://img.jx3pve.com/img/party/2016/wxhelp.jpg" alt=""></p>
                 </div>
-                <ul class="u-list">
-                    <li><img src="http://tva3.sinaimg.cn/crop.79.3.244.244.180/bcc700eejw8exy4815udrj20c80c80u3.jpg" alt=""><span>某某某</span>获得红包1元。</li>
-                    <li><img src="http://tva3.sinaimg.cn/crop.79.3.244.244.180/bcc700eejw8exy4815udrj20c80c80u3.jpg" alt=""><span>某某某</span>获得红包2元。</li>
-                    <li><img src="http://tva3.sinaimg.cn/crop.79.3.244.244.180/bcc700eejw8exy4815udrj20c80c80u3.jpg" alt=""><span>某某某</span>获得红包5元。</li>
-                    <li><img src="http://tva3.sinaimg.cn/crop.79.3.244.244.180/bcc700eejw8exy4815udrj20c80c80u3.jpg" alt=""><span>某某某</span>获得红包10元。</li>
-                </ul>
+                <p class="u-gif"><img src="http://img.jx3pve.com/img/party/2016/money.gif" alt=""></p>
             </div>
         </div>
-        <!-- 2.投票评选 -->
-        <div class="m-block m-vote">
-            <h2 class="m-title"><em>2</em>.参与投票 选出你最喜欢的作者</h2>
+    </div>
+    <!-- 2.投票评选 -->
+    <div class="m-block m-vote">
+        <div class="wp">
+            <h2 class="m-title"><em>2</em>参与投票 免费抽奖 通宝外设等你拿</h2>
             <div class="m-primary">
                 <ul class="u-list">
                     <li class="u-item">
+                        <img class="u-pic" src="http://img.jx3pve.com/img/party/2016/macro.png" alt="">
                         <span class="u-name">2016年度最受欢迎的<b>宏</b>作者</span>
-                        <span class="u-gift">
-                            <em>前三名奖励：</em>
-                            JX3PVE获奖证书 + 雷柏V500机械键盘t1/t3/t6
-                        </span>
                         <span class="u-winner">
-                            <em>最终获奖名单：</em>
+                            <em>投票中</em>
                             <ul>
-                                <li><i>1</i><b>某某</b></li>
-                                <li><i>2</i><b>某某</b></li>
-                                <li><i>3</i><b>某某</b></li>
+                                <li><i class="u-top-1">1</i><b>-</b></li>
+                                <li><i class="u-top-2">2</i><b>-</b></li>
+                                <li><i class="u-top-3">3</i><b>-</b></li>
                             </ul>
                         </span>
                     </li>
                     <li class="u-item">
+                        <img class="u-pic" src="http://img.jx3pve.com/img/party/2016/tool.png" alt="">
                         <span class="u-name">2016年度最受欢迎的<b>工具</b>作者</span>
-                        <span class="u-gift">
-                            <em>前三名奖励：</em>
-                            JX3PVE获奖证书 + 实验楼年卡/半年卡/季卡
-                        </span>
                         <span class="u-winner">
-                            <em>最终获奖名单：</em>
+                            <em>投票中</em>
                             <ul>
-                                <li><i>1</i><b>某某</b></li>
-                                <li><i>2</i><b>某某</b></li>
-                                <li><i>3</i><b>某某</b></li>
+                                <li><i class="u-top-1">1</i><b>-</b></li>
+                                <li><i class="u-top-2">2</i><b>-</b></li>
+                                <li><i class="u-top-3">3</i><b>-</b></li>
                             </ul>
                         </span>
                     </li>
                     <li class="u-item">
+                        <img class="u-pic" src="http://img.jx3pve.com/img/party/2016/fb.png" alt="">
                         <span class="u-name">2016年度最受欢迎的<b>副本攻略</b>作者</span>
-                        <span class="u-gift">
-                            <em>前三名奖励：</em>
-                            JX3PVE获奖证书 + 罗技鼠标G402/302/102
-                        </span>
                         <span class="u-winner">
-                            <em>最终获奖名单：</em>
+                            <em>投票中</em>
                             <ul>
-                                <li><i>1</i><b>某某</b></li>
-                                <li><i>2</i><b>某某</b></li>
-                                <li><i>3</i><b>某某</b></li>
+                                <li><i class="u-top-1">1</i><b>-</b></li>
+                                <li><i class="u-top-2">2</i><b>-</b></li>
+                                <li><i class="u-top-3">3</i><b>-</b></li>
                             </ul>
                         </span>
                     </li>
                     <li class="u-item">
+                        <img class="u-pic" src="http://img.jx3pve.com/img/party/2016/role.png" alt="">
                         <span class="u-name">2016年度最受欢迎的<b>职业攻略</b>作者</span>
-                        <span class="u-gift">
-                            <em>前三名奖励：</em>
-                            JX3PVE获奖证书 + 雷蛇宇宙鼠标垫大号/中号/小号
-                        </span>
                         <span class="u-winner">
-                            <em>最终获奖名单：</em>
+                            <em>投票中</em>
                             <ul>
-                                <li><i>1</i><b>某某</b></li>
-                                <li><i>2</i><b>某某</b></li>
-                                <li><i>3</i><b>某某</b></li>
-                            </ul>
-                        </span>
-                    </li>
-                    <li class="u-item">
-                        <span class="u-name">2016年度最受欢迎的<b>捏脸</b>作者</span>
-                        <span class="u-gift">
-                            <em>前三名奖励：</em>
-                            JX3PVE获奖证书 + 苍娆黑檀梳/绿檀梳/紫檀梳
-                        </span>
-                        <span class="u-winner">
-                            <em>最终获奖名单：</em>
-                            <ul>
-                                <li><i>1</i><b>某某</b></li>
-                                <li><i>2</i><b>某某</b></li>
-                                <li><i>3</i><b>某某</b></li>
+                                <li><i class="u-top-1">1</i><b>-</b></li>
+                                <li><i class="u-top-2">2</i><b>-</b></li>
+                                <li><i class="u-top-3">3</i><b>-</b></li>
                             </ul>
                         </span>
                     </li>
                 </ul>
-                <a class="u-btn-go" href=""><img src="http://img.jx3pve.com/img/header/wx_172.jpg" alt=""><span>扫一扫参与投票</span></a>
+                <p class="u-tips u-im">
+                    <i class="u-gift-1"></i>前三名分别获得“实验楼”VIP年卡、季卡、月卡一张，并获得相应证书与神秘礼物一份。<br>
+                    <i class="u-gift-2"></i>参与投票可获得一次抽奖机会，有机会赢得通宝、电脑外设等奖品。
+                </p>
+                <a class="u-button" href="https://wj.qq.com/s/981879/6ffd" target="_blank">点击参与</a>
             </div>
         </div>
-        <!-- 3.抽奖 -->
-        <div class="m-block m-box">
-            <h2 class="m-title"><em>3</em>.参与抽奖 100%领取好礼</h2>
+    </div>
+    <!-- 3.问卷 -->
+    <div class="m-block m-feedback">
+        <div class="wp">
+            <h2 class="m-title"><em>3</em>参与问卷调查 拿月卡点卡</h2>
             <div class="m-primary">
-                <div class="u-preview"><img src="http://ww3.sinaimg.cn/large/bcc700eegw1fai5lbpwn9j208t0d6jsk.jpg" alt=""></div>
-                <a class="u-btn-go" href=""><img src="http://img.jx3pve.com/img/header/wx_172.jpg" alt=""><span>扫一扫参与抽奖</span></a>
-            </div>
-        </div>
-        <!-- 4.问卷 -->
-        <div class="m-block m-feedback">
-            <h2 class="m-title"><em>4</em>.参与问卷调查 赢月卡点卡</h2>
-            <div class="m-primary">
+                <img class="u-pic" src="http://img.jx3pve.com/img/party/2016/wenjuan.png" alt="">
                 <div class="u-about">
-                    <img src="" alt="">
                     <p>参与问卷调查，给出你的建议，说出你的不满</p>
                     <p>你的建议是我们前进的动力</p>
-                    <p>优秀答卷将有机会获得月卡、点卡或神秘礼物一份</p>
-                    <p>骚年，快来尽情吐槽吧~</p>
+                    <p>少侠，快来尽情鞭笞吧~</p>
+                    <p class="u-im"><i class="u-gift-3"></i>优秀答卷将有机会获得月卡、点卡或神秘礼物一份</p>
+                    <a class="u-button" href="https://wj.qq.com/s/981702/6997/" target="_blank"><span>点击参与</span></a>
                 </div>
-                <a class="u-btn-go" href=""><span>点击参与</span></a>
             </div>
         </div>
-        <!-- 5.贡献者 -->
-        <div class="m-block m-admin">
-            <h2 class="m-title"><em>5</em>.2016年度网站杰出贡献者</h2>
+    </div>
+    <!-- 4.贡献者 -->
+    <div class="m-block m-admin">
+        <div class="wp">
+            <h2 class="m-title"><em>5</em>2016年度网站杰出贡献者名单</h2>
             <div class="m-primary">
                 <div class="u-list">
                     <!--{block/1823}-->
                 </div>
-                <p>站长寄语：<br/>
-                    感谢以上小伙伴在2016年中为网站的默默付出与贡献。。。<br>
-                    获得证书与挂件一枚<br>
-                    图1证书  图2挂件<br>
-                    欢迎其它有兴趣的小伙伴，一起加入我们这个大家庭。
-                    admin@jx3pve.com ~
-                </p>
+                <div class="u-info">
+                    <!-- <img class="u-pic" src="http://img.jx3pve.com/img/party/2016/gongxian.png" alt=""> -->
+                    <p class="u-tips">
+                        感谢所有开发团队成员及所有默默贡献的无名少侠们<br>
+                        风雨同舟，这个江湖感谢有你陪伴<br>
+                        在过去也许我们还有些不足<br>
+                        在未来我们会做得更好<br>
+                        <p class="u-im"><i class="u-gift-4"></i>所有杰出贡献者将获得相应证书与神秘礼物一份</p>
+                        <a class="u-button" target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=77b8429b9b30d337562f845a47a3b6beb8e1d1de582f346192c1ed1c316932d5">加入开发团队</a>
+                    </p>
+                </div>
             </div>
         </div>
-        <!-- 6.登录有礼 -->
-        <div class="m-block m-credit">
-            <h2 class="m-title"><em>6</em>.登录有礼</h2>
+    </div>
+    <!-- 5.登录有礼 -->
+    <div class="m-block m-credit">
+        <div class="wp">
+            <h2 class="m-title"><em>5</em>登录有礼 连续登陆会员领回家</h2>
             <div class="m-primary">
-                活动期间登录领米币，可开通VIP会员一个月。
-                每天可领128米币*4，28号当天688米币  = 1200米币
+                <img class="u-pic" src="http://img.jx3pve.com/img/party/2016/denglu.png" alt="">
+                <div class="u-info">
+                    活动期间登录即送128米币<br>
+                    连续10天累计可获得1280点米币，开通1个月会员
+                    <a class="u-button" href="./vip" target="_blank">开通会员</a>
+                </div>
             </div>
         </div>
     </div>
 </div>
 <div class="m-footer">
-    本次活动最终解释权归JX3PVE.COM所有。<br>
-    奖品领取问题请联系admin@jx3pve.com
+    本次活动最终解释权归JX3PVE.COM所有,奖品领取疑问<a href="./feedback" target="_blank">请点击此处联系</a>.
 </div>
-<script src="http://js.jx3pve.com/js/party/2016.js"></script>
-<!--{template common/footer}
+<!--{template common/footer}-->
