--- a/css/global/font.less
+++ b/css/global/font.less
@@ -2,7 +2,7 @@ html.desktop{
     font-size:13px;
 }
 body{
-    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif,"宋体";
+    font-family: PingFangSC-Regular,'Helvetica Neue',Helvetica,Arial,sans-serif,"宋体";
     font-size:13px;
     line-height: 2;
     word-wrap: break-word;
