Signed-off-by: unknown <17229398@qq.com>

--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -23,6 +23,10 @@
                 <!--{block/1819}-->
             </div>
 
+            <div class="m-index-minibanner">
+                <!--{block/1826}-->
+            </div>
+
             <div class="m-index-ac">
                 <h2><a class="m-title" href="http://xw.jx3.xoyo.com/announce/" target="_blank"><i></i>游戏更新</a></h2>
                 <!--{block/1816}-->
