--- a/template/fam/forum/sidebar.htm
+++ b/template/fam/forum/sidebar.htm
@@ -10,6 +10,15 @@
         <li><a href="./forum.php?mod=forumdisplay&fid=369&filter=sortid&sortid=20&searchsort=1&fbboss=6" ><i><img src="http://ww2.sinaimg.cn/large/bcc700eegw1f8unik8tcfj2028028aa9.jpg" alt=""></i><span>黑齿元祐</span></a></li>
         <li><a href="./forum.php?mod=forumdisplay&fid=369&filter=sortid&sortid=20&searchsort=1&fbboss=7" ><i><img src="http://ww3.sinaimg.cn/large/bcc700eegw1f8unikia65j2028028wer.jpg" alt=""></i><span>哥舒翰</span></a></li>
         <li><a href="./forum.php?mod=forumdisplay&fid=369&filter=sortid&sortid=20&searchsort=1&fbboss=8" ><i><img src="http://ww1.sinaimg.cn/large/bcc700eegw1f8unikmsexj2028028q36.jpg" alt=""></i><span>安庆绪</span></a></li>
+
+        <li><a href="./forum.php?mod=forumdisplay&fid=369&filter=sortid&sortid=20&searchsort=1&fbboss=17" ><i><img src="http://wx3.sinaimg.cn/mw690/bcc700eegy1fe4xl0l26xj2028028dga.jpg" alt=""></i><span>史朝英</span></a></li>
+        <li><a href="./forum.php?mod=forumdisplay&fid=369&filter=sortid&sortid=20&searchsort=1&fbboss=18" ><i><img src="http://wx3.sinaimg.cn/mw690/bcc700eegy1fe4xl0x35vj20280283yz.jpg" alt=""></i><span>柳愚</span></a></li>
+        <li><a href="./forum.php?mod=forumdisplay&fid=369&filter=sortid&sortid=20&searchsort=1&fbboss=19" ><i><img src="http://wx2.sinaimg.cn/mw690/bcc700eegy1fe4xl1cbqej2028028gm3.jpg" alt=""></i><span>柳哲</span></a></li>
+        <li><a href="./forum.php?mod=forumdisplay&fid=369&filter=sortid&sortid=20&searchsort=1&fbboss=20" ><i><img src="http://wx2.sinaimg.cn/mw690/bcc700eegy1fe4xl1pejej2028028gm4.jpg" alt=""></i><span>柳时清</span></a></li>
+        <li><a href="./forum.php?mod=forumdisplay&fid=369&filter=sortid&sortid=20&searchsort=1&fbboss=21" ><i><img src="http://wx2.sinaimg.cn/mw690/bcc700eegy1fe4xl23jwij2028028gm2.jpg" alt=""></i><span>解语</span></a></li>
+        <li><a href="./forum.php?mod=forumdisplay&fid=369&filter=sortid&sortid=20&searchsort=1&fbboss=22" ><i><img src="http://wx4.sinaimg.cn/mw690/bcc700eegy1fe4xl2dtw8j2028028wf1.jpg" alt=""></i><span>伊玛目</span></a></li>
+        <li><a href="./forum.php?mod=forumdisplay&fid=369&filter=sortid&sortid=20&searchsort=1&fbboss=23" ><i><img src="http://wx4.sinaimg.cn/mw690/bcc700eegy1fe4xl2nip4j2028028aal.jpg" alt=""></i><span>柳秀岳</span></a></li>
+        <li><a href="./forum.php?mod=forumdisplay&fid=369&filter=sortid&sortid=20&searchsort=1&fbboss=24" ><i><img src="http://wx2.sinaimg.cn/mw690/bcc700eegy1fe4xl30z3rj2028028t9a.jpg" alt=""></i><span>柳鸾旗</span></a></li>
     </ul>
 </div>
 
@@ -34,6 +43,8 @@
                 <select name="searchoption[211][value]" id="fbname" class="u-select">
                     <option value="0">请选择</option>
                     <option value="1">其它 </option>
+                    <option value="24">锻刀厅 </option>
+                    <option value="25">千雷殿 </option>
                     <option value="22">双曜亭 </option>
                     <option value="23">观风殿 </option>
                     <option value="20">仙侣庭园 </option>
@@ -76,7 +87,7 @@
         </p>
     </form>
 </div>
-<div class="m-fam-newsearchtips">
+<div class="m-fam-newsearchtips" style="display:none;">
     <!--{block/1824}-->
 </div>
 
