--- a/template/default/jx3pve/c_compass_mini.htm
+++ b/template/default/jx3pve/c_compass_mini.htm
@@ -1,9 +1,5 @@
 <div class="c-compass c-compass-mini">
     <ul>
-        <li><a href="./bbs">
-            <i class="u-bbs"><img src="http://img.jx3pve.com/img/system/sitemap/bbs.png" alt="论坛交流"></i>
-            <span>广场</span><em></em>
-        </a></li>
         <li><a href="./macro">
             <i class="u-macro"><img src="http://img.jx3pve.com/img/system/sitemap/macro.png" alt="剑三宏"></i>
             <span>宏库</span><em class="i-mark-hot"></em>
@@ -32,9 +28,13 @@
             <i class="u-story"><img src="http://img.jx3pve.com/img/system/sitemap/story.png" alt="故事"></i>
             <span>故事</span><em></em>
         </a></li>
-        <li class="u-shop"><a href="http://www.candy-lab.com" target="_blank">
-            <i class="u-shop"><img src="http://img.jx3pve.com/img/system/sitemap/shop.png" alt=""></i>
-            <span>周边</span><em></em>
+        <li><a href="./bbs">
+            <i class="u-bbs"><img src="http://img.jx3pve.com/img/system/sitemap/bbs.png" alt="论坛交流"></i>
+            <span>广场</span><em></em>
+        </a></li>
+        <li><a href="./ow">
+            <i class="u-ow"><img src="http://img.jx3pve.com/img/system/sitemap/ow.png" alt="守望先锋"></i>
+            <span>竞技</span><em></em>
         </a></li>
         <li class="u-link"><a href="https://www.j3pz.com/" target="_blank">
             <i class="u-peizhuang"><img src="http://img.jx3pve.com/img/system/sitemap/peizhuang.png" alt="配装模拟"></i>
@@ -44,7 +44,7 @@
             <i class="u-speed"><img src="http://img.jx3pve.com/img/system/sitemap/speed.png" alt="加速计算"></i>
             <span>急速</span><em></em>
         </a></li>
-        <li class="u-link"><a href="http://www.j3ui.com/wiki" target="_blank">
+        <li class="u-link"><a href="https://haimanchajian.com/jx3/wiki" target="_blank">
             <i class="u-chengjiu"><img src="http://img.jx3pve.com/img/system/sitemap/chengjiu.png" style="left:-5px;width:120%;top:-2px;" alt="成就百科"></i>
             <span>成就</span><em></em>
         </a></li>
@@ -52,17 +52,9 @@
             <i class="u-haiman"><img src="http://img.jx3pve.com/img/system/sitemap/haiman.png" alt="海鳗游戏数据"></i>
             <span>数据</span><em></em>
         </a></li>
-        <li><a href="./app/servers">
-            <i class="u-servers"><img src="http://img.jx3pve.com/img/system/sitemap/servers.png" alt="开服监控"></i>
-            <span>开服记录</span><em></em>
-        </a></li>
         <li><a href="./app/faceclean">
             <i class="u-faceclean"><img src="http://img.jx3pve.com/img/system/sitemap/faceclean.png" alt="脸型数据清洗"></i>
             <span>脸型清洗</span><em></em>
-        </a></li>
-        <li><a href="./ow">
-            <i class="u-ow"><img src="http://img.jx3pve.com/img/system/sitemap/ow.png" alt="守望先锋"></i>
-            <span>竞技</span><em></em>
         </a></li>
         <li class="u-hide"><a href="javascript:;">
             <i class="u-media"><img src="http://img.jx3pve.com/img/system/sitemap/locked.png" alt=""></i>
