--- a/template/default/common/nav.htm
+++ b/template/default/common/nav.htm
@@ -10,7 +10,7 @@
 			<li class="{if $_G[fid]=='92'}on{/if}"><a href="./face">捏脸<span>Face</span></a></li>
 			<!-- <li class="{if $_G[fid]=='79'}on{/if}"><a href="./pet">宠物<span>Wall</span></a></li> -->
 			<!-- <li class="{if $_G[fid]=='79'}on{/if}"><a href="./wall">壁纸<span>Wall</span></a></li> -->
-			<li class="{if $_G[fid]=='67' || $_G[fid]=='407' || $_G[fid]=='394' || $_G[fid]=='404' || $_G[fid]=='406'}on{/if}"><a href="./raid">江湖<span>Info</span></a></li>
+			<li class="{if $_G[fid]=='420'}on{/if}"><a href="./raid">江湖<span>Info</span></a></li>
 			<li class="{if $_G[fid]=='2'}on{/if}"><a href="./bbs">讨论区<span>Forum</span></a></li>
 		</ul> 
 		<a href="./sitemap" class="u-all {if $_GET['topicid']==110}on{/if}">Sitemap</a>
