--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -37,9 +37,9 @@
                 <!--{block/1808}-->
             </div>
 
-            <div class="m-index-wxcode">
-                <span class="u-img"><img src="http://img.jx3pve.com/img/header/wx_148.png" alt="剑网3PVE微信公众号"></span>
-                <p>扫一扫关注微信公众号</p>
+            <div class="m-index-ac m-index-wxcode">
+                <h2><a class="m-title" href="javascript:;"><i></i>微信扫一扫关注</a></h2>
+                <!--{block/1827}-->
             </div>
         </div>
     </div>
